--- a/Catopuma/build.gradle
+++ b/Catopuma/build.gradle
@@ -41,6 +41,7 @@ android {
             minifyEnabled true
             zipAlignEnabled true
             shrinkResources true
+            pseudoLocalesEnabled false
             ext.enableCrashlytics = false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
